dependent/parser.output
   0  $accept : %entry% $end

   1  repl :
   2       | repl SHOWCONTEXT DSEMI
   3       | repl DSEMI
   4       | repl line

   5  line : Cmd DSEMI
   6       | Cmd SEMI line

   7  compiler : EOF
   8           | Cmd SEMI compiler

   9  Cmd : Tm
  10      | UCID TyBind
  11      | LCID Bind

  12  TyBind :
  13         | EQ Ty

  14  Bind : COLON Ty
  15       | EQ Tm

  16  Ty : LCID
  17     | UNIV
  18     | BOOL
  19     | NAT
  20     | Ty ARROW Ty
  21     | PI Ty Tm
  22     | SIGMA Ty Tm
  23     | LPAREN Ty RPAREN

  24  Tm : ApTm
  25     | LAMBDA LCID COLON Ty DOT Tm
  26     | IF Tm THEN Tm ELSE Tm

  27  ApTm : ATm
  28       | ApTm ATm
  29       | PI Ty Tm
  30       | SIGMA Ty Tm
  31       | SUCC ATm
  32       | PRED ATm
  33       | ISZERO ATm

  34  ATm : LPAREN TmSeq RPAREN
  35      | LCID
  36      | UNIV
  37      | BOOL
  38      | NAT
  39      | TRUE
  40      | FALSE
  41      | INTV

  42  TmSeq : Tm

  43  %entry% : '\001' compiler
  44          | '\002' repl

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . compiler  (43)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	UCID  shift 17
	LCID  shift 18
	LPAREN  shift 19
	EOF  shift 20
	.  error

	compiler  goto 21
	Cmd  goto 22
	Tm  goto 23
	ApTm  goto 24
	ATm  goto 25


state 2
	%entry% : '\002' . repl  (44)
	repl : .  (1)

	.  reduce 1

	repl  goto 26


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	ATm : UNIV .  (36)

	.  reduce 36


state 5
	ApTm : PI . Ty Tm  (29)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 34


state 6
	ApTm : SIGMA . Ty Tm  (30)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 35


state 7
	ATm : BOOL .  (37)

	.  reduce 37


state 8
	ATm : NAT .  (38)

	.  reduce 38


state 9
	ApTm : SUCC . ATm  (31)

	UNIV  shift 4
	BOOL  shift 7
	NAT  shift 8
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	ATm  goto 37


state 10
	ApTm : PRED . ATm  (32)

	UNIV  shift 4
	BOOL  shift 7
	NAT  shift 8
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	ATm  goto 38


state 11
	ApTm : ISZERO . ATm  (33)

	UNIV  shift 4
	BOOL  shift 7
	NAT  shift 8
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	ATm  goto 39


state 12
	Tm : LAMBDA . LCID COLON Ty DOT Tm  (25)

	LCID  shift 40
	.  error


state 13
	Tm : IF . Tm THEN Tm ELSE Tm  (26)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	Tm  goto 41
	ApTm  goto 24
	ATm  goto 25


state 14
	ATm : TRUE .  (39)

	.  reduce 39


state 15
	ATm : FALSE .  (40)

	.  reduce 40


state 16
	ATm : INTV .  (41)

	.  reduce 41


state 17
	Cmd : UCID . TyBind  (10)
	TyBind : .  (12)

	EQ  shift 42
	SEMI  reduce 12
	DSEMI  reduce 12

	TyBind  goto 43


state 18
	Cmd : LCID . Bind  (11)
	ATm : LCID .  (35)

	EQ  shift 44
	COLON  shift 45
	UNIV  reduce 35
	BOOL  reduce 35
	NAT  reduce 35
	TRUE  reduce 35
	FALSE  reduce 35
	INTV  reduce 35
	LCID  reduce 35
	LPAREN  reduce 35
	SEMI  reduce 35
	DSEMI  reduce 35

	Bind  goto 46


state 19
	ATm : LPAREN . TmSeq RPAREN  (34)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	Tm  goto 47
	ApTm  goto 24
	ATm  goto 25
	TmSeq  goto 48


state 20
	compiler : EOF .  (7)

	.  reduce 7


state 21
	%entry% : '\001' compiler .  (43)

	.  reduce 43


state 22
	compiler : Cmd . SEMI compiler  (8)

	SEMI  shift 49
	.  error


state 23
	Cmd : Tm .  (9)

	.  reduce 9


24: shift/reduce conflict (shift 4, reduce 24) on UNIV
24: shift/reduce conflict (shift 7, reduce 24) on BOOL
24: shift/reduce conflict (shift 8, reduce 24) on NAT
24: shift/reduce conflict (shift 14, reduce 24) on TRUE
24: shift/reduce conflict (shift 15, reduce 24) on FALSE
24: shift/reduce conflict (shift 16, reduce 24) on INTV
24: shift/reduce conflict (shift 36, reduce 24) on LCID
24: shift/reduce conflict (shift 19, reduce 24) on LPAREN
state 24
	Tm : ApTm .  (24)
	ApTm : ApTm . ATm  (28)

	UNIV  shift 4
	BOOL  shift 7
	NAT  shift 8
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	PI  reduce 24
	SIGMA  reduce 24
	SUCC  reduce 24
	PRED  reduce 24
	ISZERO  reduce 24
	LAMBDA  reduce 24
	IF  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	ARROW  reduce 24
	DOT  reduce 24
	RPAREN  reduce 24
	SEMI  reduce 24
	DSEMI  reduce 24

	ATm  goto 50


state 25
	ApTm : ATm .  (27)

	.  reduce 27


state 26
	repl : repl . SHOWCONTEXT DSEMI  (2)
	repl : repl . DSEMI  (3)
	repl : repl . line  (4)
	%entry% : '\002' repl .  (44)

	SHOWCONTEXT  shift 51
	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	UCID  shift 17
	LCID  shift 18
	LPAREN  shift 19
	DSEMI  shift 52
	$end  reduce 44

	line  goto 53
	Cmd  goto 54
	Tm  goto 23
	ApTm  goto 24
	ATm  goto 25


state 27
	Ty : UNIV .  (17)

	.  reduce 17


state 28
	Ty : PI . Ty Tm  (21)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 55


state 29
	Ty : SIGMA . Ty Tm  (22)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 56


state 30
	Ty : BOOL .  (18)

	.  reduce 18


state 31
	Ty : NAT .  (19)

	.  reduce 19


state 32
	Ty : LCID .  (16)

	.  reduce 16


state 33
	Ty : LPAREN . Ty RPAREN  (23)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 57


state 34
	Ty : Ty . ARROW Ty  (20)
	ApTm : PI Ty . Tm  (29)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	ARROW  shift 58
	LPAREN  shift 19
	.  error

	Tm  goto 59
	ApTm  goto 24
	ATm  goto 25


state 35
	Ty : Ty . ARROW Ty  (20)
	ApTm : SIGMA Ty . Tm  (30)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	ARROW  shift 58
	LPAREN  shift 19
	.  error

	Tm  goto 60
	ApTm  goto 24
	ATm  goto 25


state 36
	ATm : LCID .  (35)

	.  reduce 35


state 37
	ApTm : SUCC ATm .  (31)

	.  reduce 31


state 38
	ApTm : PRED ATm .  (32)

	.  reduce 32


state 39
	ApTm : ISZERO ATm .  (33)

	.  reduce 33


state 40
	Tm : LAMBDA LCID . COLON Ty DOT Tm  (25)

	COLON  shift 61
	.  error


state 41
	Tm : IF Tm . THEN Tm ELSE Tm  (26)

	THEN  shift 62
	.  error


state 42
	TyBind : EQ . Ty  (13)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 63


state 43
	Cmd : UCID TyBind .  (10)

	.  reduce 10


state 44
	Bind : EQ . Tm  (15)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	Tm  goto 64
	ApTm  goto 24
	ATm  goto 25


state 45
	Bind : COLON . Ty  (14)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 65


state 46
	Cmd : LCID Bind .  (11)

	.  reduce 11


state 47
	TmSeq : Tm .  (42)

	.  reduce 42


state 48
	ATm : LPAREN TmSeq . RPAREN  (34)

	RPAREN  shift 66
	.  error


state 49
	compiler : Cmd SEMI . compiler  (8)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	UCID  shift 17
	LCID  shift 18
	LPAREN  shift 19
	EOF  shift 20
	.  error

	compiler  goto 67
	Cmd  goto 22
	Tm  goto 23
	ApTm  goto 24
	ATm  goto 25


state 50
	ApTm : ApTm ATm .  (28)

	.  reduce 28


state 51
	repl : repl SHOWCONTEXT . DSEMI  (2)

	DSEMI  shift 68
	.  error


state 52
	repl : repl DSEMI .  (3)

	.  reduce 3


state 53
	repl : repl line .  (4)

	.  reduce 4


state 54
	line : Cmd . DSEMI  (5)
	line : Cmd . SEMI line  (6)

	SEMI  shift 69
	DSEMI  shift 70
	.  error


state 55
	Ty : Ty . ARROW Ty  (20)
	Ty : PI Ty . Tm  (21)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	ARROW  shift 58
	LPAREN  shift 19
	.  error

	Tm  goto 71
	ApTm  goto 24
	ATm  goto 25


state 56
	Ty : Ty . ARROW Ty  (20)
	Ty : SIGMA Ty . Tm  (22)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	ARROW  shift 58
	LPAREN  shift 19
	.  error

	Tm  goto 72
	ApTm  goto 24
	ATm  goto 25


state 57
	Ty : Ty . ARROW Ty  (20)
	Ty : LPAREN Ty . RPAREN  (23)

	ARROW  shift 58
	RPAREN  shift 73
	.  error


state 58
	Ty : Ty ARROW . Ty  (20)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 74


state 59
	ApTm : PI Ty Tm .  (29)

	.  reduce 29


state 60
	ApTm : SIGMA Ty Tm .  (30)

	.  reduce 30


state 61
	Tm : LAMBDA LCID COLON . Ty DOT Tm  (25)

	UNIV  shift 27
	PI  shift 28
	SIGMA  shift 29
	BOOL  shift 30
	NAT  shift 31
	LCID  shift 32
	LPAREN  shift 33
	.  error

	Ty  goto 75


state 62
	Tm : IF Tm THEN . Tm ELSE Tm  (26)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	Tm  goto 76
	ApTm  goto 24
	ATm  goto 25


state 63
	TyBind : EQ Ty .  (13)
	Ty : Ty . ARROW Ty  (20)

	ARROW  shift 58
	SEMI  reduce 13
	DSEMI  reduce 13


state 64
	Bind : EQ Tm .  (15)

	.  reduce 15


state 65
	Bind : COLON Ty .  (14)
	Ty : Ty . ARROW Ty  (20)

	ARROW  shift 58
	SEMI  reduce 14
	DSEMI  reduce 14


state 66
	ATm : LPAREN TmSeq RPAREN .  (34)

	.  reduce 34


state 67
	compiler : Cmd SEMI compiler .  (8)

	.  reduce 8


state 68
	repl : repl SHOWCONTEXT DSEMI .  (2)

	.  reduce 2


state 69
	line : Cmd SEMI . line  (6)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	UCID  shift 17
	LCID  shift 18
	LPAREN  shift 19
	.  error

	line  goto 77
	Cmd  goto 54
	Tm  goto 23
	ApTm  goto 24
	ATm  goto 25


state 70
	line : Cmd DSEMI .  (5)

	.  reduce 5


state 71
	Ty : PI Ty Tm .  (21)

	.  reduce 21


state 72
	Ty : SIGMA Ty Tm .  (22)

	.  reduce 22


state 73
	Ty : LPAREN Ty RPAREN .  (23)

	.  reduce 23


74: shift/reduce conflict (shift 58, reduce 20) on ARROW
state 74
	Ty : Ty . ARROW Ty  (20)
	Ty : Ty ARROW Ty .  (20)

	ARROW  shift 58
	UNIV  reduce 20
	PI  reduce 20
	SIGMA  reduce 20
	BOOL  reduce 20
	NAT  reduce 20
	SUCC  reduce 20
	PRED  reduce 20
	ISZERO  reduce 20
	LAMBDA  reduce 20
	IF  reduce 20
	TRUE  reduce 20
	FALSE  reduce 20
	INTV  reduce 20
	LCID  reduce 20
	DOT  reduce 20
	LPAREN  reduce 20
	RPAREN  reduce 20
	SEMI  reduce 20
	DSEMI  reduce 20


state 75
	Ty : Ty . ARROW Ty  (20)
	Tm : LAMBDA LCID COLON Ty . DOT Tm  (25)

	ARROW  shift 58
	DOT  shift 78
	.  error


state 76
	Tm : IF Tm THEN Tm . ELSE Tm  (26)

	ELSE  shift 79
	.  error


state 77
	line : Cmd SEMI line .  (6)

	.  reduce 6


state 78
	Tm : LAMBDA LCID COLON Ty DOT . Tm  (25)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	Tm  goto 80
	ApTm  goto 24
	ATm  goto 25


state 79
	Tm : IF Tm THEN Tm ELSE . Tm  (26)

	UNIV  shift 4
	PI  shift 5
	SIGMA  shift 6
	BOOL  shift 7
	NAT  shift 8
	SUCC  shift 9
	PRED  shift 10
	ISZERO  shift 11
	LAMBDA  shift 12
	IF  shift 13
	TRUE  shift 14
	FALSE  shift 15
	INTV  shift 16
	LCID  shift 36
	LPAREN  shift 19
	.  error

	Tm  goto 81
	ApTm  goto 24
	ATm  goto 25


state 80
	Tm : LAMBDA LCID COLON Ty DOT Tm .  (25)

	.  reduce 25


state 81
	Tm : IF Tm THEN Tm ELSE Tm .  (26)

	.  reduce 26


State 24 contains 8 shift/reduce conflicts.
State 74 contains 1 shift/reduce conflict.


71 terminals, 13 nonterminals
45 grammar rules, 82 states
